# om

./: .ascii  .gitignore  .omignore.example  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PROMPT.md  README.md  SPEC.md
.github/workflows/: ci.yml
src/: cat.rs  cli.rs  config.rs  git.rs  ignore.rs  init.rs  lib.rs  main.rs  scorer.rs  session.rs  session_cmd.rs  tokens.rs  tree.rs
src/output/: json.rs  mod.rs  xml.rs
tests/: integration.rs  output_formats.rs  perf.rs
