[package]
name = "om-context"
version = "0.1.0"
edition = "2021"
authors = ["oeo"]
license = "MIT"
description = "LLM context tool that scores project files by importance"
repository = "https://github.com/oeo/om"
readme = "README.md"

[[bin]]
name = "om"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
glob = "0.3"
lazy_static = "1.4"
dirs = "5"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
