[package]
name = "om-context"
version = "0.2.2"
edition = "2021"
description = "LLM context tool that scores project files by importance"
repository = "https://github.com/oeo/om"
readme = "README.md"

[[bin]]
name = "om"
path = "src/main.rs"

[dependencies]
tiktoken-rs = "0.9.1"
rayon = "1.10"
num_cpus = "1.16"
num-integer = "0.1"
clap = { version = "4", features = ["derive"] }
colored = "2"
glob = "0.3"
lazy_static = "1.4"
dirs = "5"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
mime_guess = "2"
quick-xml = { version = "0.31", features = ["serialize"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
proptest = "1"
